; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_context.c_context_invalidate_state.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_context.c_context_invalidate_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_context = type { i64*, i32*, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@CHAR_BIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @context_invalidate_state(%struct.wined3d_context* %0, i64 %1) #0 {
  %3 = alloca %struct.wined3d_context*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.wined3d_context* %0, %struct.wined3d_context** %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = load %struct.wined3d_context*, %struct.wined3d_context** %3, align 8
  %9 = getelementptr inbounds %struct.wined3d_context, %struct.wined3d_context* %8, i32 0, i32 3
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = load i64, i64* %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i64 %11
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  store i64 %14, i64* %5, align 8
  %15 = load %struct.wined3d_context*, %struct.wined3d_context** %3, align 8
  %16 = load i64, i64* %5, align 8
  %17 = call i64 @isStateDirty(%struct.wined3d_context* %15, i64 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %2
  br label %52

20:                                               ; preds = %2
  %21 = load i64, i64* %5, align 8
  %22 = load %struct.wined3d_context*, %struct.wined3d_context** %3, align 8
  %23 = getelementptr inbounds %struct.wined3d_context, %struct.wined3d_context* %22, i32 0, i32 0
  %24 = load i64*, i64** %23, align 8
  %25 = load %struct.wined3d_context*, %struct.wined3d_context** %3, align 8
  %26 = getelementptr inbounds %struct.wined3d_context, %struct.wined3d_context* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 8
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %26, align 8
  %29 = sext i32 %27 to i64
  %30 = getelementptr inbounds i64, i64* %24, i64 %29
  store i64 %21, i64* %30, align 8
  %31 = load i64, i64* %5, align 8
  %32 = load i32, i32* @CHAR_BIT, align 4
  %33 = sext i32 %32 to i64
  %34 = mul i64 4, %33
  %35 = udiv i64 %31, %34
  store i64 %35, i64* %6, align 8
  %36 = load i64, i64* %5, align 8
  %37 = load i32, i32* @CHAR_BIT, align 4
  %38 = sext i32 %37 to i64
  %39 = mul i64 4, %38
  %40 = sub i64 %39, 1
  %41 = and i64 %36, %40
  %42 = trunc i64 %41 to i32
  store i32 %42, i32* %7, align 4
  %43 = load i32, i32* %7, align 4
  %44 = shl i32 1, %43
  %45 = load %struct.wined3d_context*, %struct.wined3d_context** %3, align 8
  %46 = getelementptr inbounds %struct.wined3d_context, %struct.wined3d_context* %45, i32 0, i32 1
  %47 = load i32*, i32** %46, align 8
  %48 = load i64, i64* %6, align 8
  %49 = getelementptr inbounds i32, i32* %47, i64 %48
  %50 = load i32, i32* %49, align 4
  %51 = or i32 %50, %44
  store i32 %51, i32* %49, align 4
  br label %52

52:                                               ; preds = %20, %19
  ret void
}

declare dso_local i64 @isStateDirty(%struct.wined3d_context*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
